--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1207,7 +1207,69 @@
         </div>
     </details>
 </div>
-                
+                <section aria-labelledby="ucuncu-kisim">
+    <h2 id="ucuncu-kisim" class="text-3xl font-bold text-slate-800 mt-16 mb-6 border-b pb-4">
+        ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler (Pozitif Statü Hakları)
+    </h2>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölümde, devletin vatandaşlarına aktif olarak sunmakla yükümlü olduğu hizmetler ve sağlaması gereken imkanlar yer alır. Devletin sadece bir "bekçi" değil, aynı zamanda sosyal adaleti sağlamakla görevli bir "hizmetkar" olduğu anlayışı bu hakların temelini oluşturur.
+    </p>
+
+    <div class="mt-16 mb-6">
+        <div class="inline-flex items-center px-4 py-2 bg-teal-50 text-teal-800 rounded-full border border-teal-200 shadow-sm">
+            <span class="text-xl mr-3">👨‍👩‍👧‍👦</span>
+            <h4 class="text-xl font-bold">Ailenin Korunması ve Eğitim Hakkı</h4>
+        </div>
+        <hr class="mt-2 border-slate-200">
+    </div>
+
+    <details id="madde-41" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 41 – Ailenin Korunması ve Çocuk Hakları
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Aile, Türk toplumunun temelidir ve <strong>eşler arasında eşitliğe dayanır.</strong><br><br>
+                Devlet, ailenin huzur ve refahı ile özellikle ananın ve çocukların korunması ve aile planlamasının öğretimi ile uygulanmasını sağlamak için gerekli tedbirleri alır, teşkilatı kurar.<br><br>
+                Her çocuk, korunma ve bakımdan yararlanma, yüksek yararına açıkça aykırı olmadıkça, ana ve babasıyla kişisel ve doğrudan ilişki kurma ve sürdürme hakkına sahiptir.<br><br>
+                Devlet, her türlü istismara ve şiddete karşı çocukları koruyucu tedbirleri alır.
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;" class="mb-2"><strong>🧠 Hoca Yorumu:</strong> Bu madde, devlete sosyal alanda önemli görevler yükler. Sınav için en kritik noktalar şunlardır:</p>
+                <ul class="list-none space-y-2 text-sm">
+                    <li class="flex items-start"><span class="mr-2">1.</span><div>Aile, toplumun <strong>temelidir</strong>.</div></li>
+                    <li class="flex items-start"><span class="mr-2">2.</span><div>Evlilik birliği, <strong>eşler arasında eşitlik</strong> ilkesine dayanır.</div></li>
+                    <li class="flex items-start"><span class="mr-2">3.</span><div>Devletin aileyi, anayı ve özellikle çocuğu korumak için <strong>tedbir alma ve teşkilat kurma</strong> gibi aktif görevleri vardır.</div></li>
+                </ul>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-42" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 42 – Eğitim ve Öğrenim Hakkı ve Ödevi
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Kimse, eğitim ve öğrenim hakkından yoksun bırakılamaz.<br><br>
+                Eğitim ve öğretim, Atatürk ilkeleri ve inkılapları doğrultusunda, çağdaş bilim ve eğitim esaslarına göre, <strong>Devletin gözetim ve denetimi altında</strong> yapılır...<br><br>
+                <strong>İlköğretim</strong>, kız ve erkek bütün vatandaşlar için <strong>zorunludur</strong> ve Devlet okullarında <strong>parasızdır</strong>.<br><br>
+                <strong>Türkçeden başka hiçbir dil</strong>, eğitim ve öğretim kurumlarında Türk vatandaşlarına <strong>ana dilleri olarak okutulamaz ve öğretilemez.</strong>
+            </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Eğitim Hakkının Anayasal Şifreleri</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu maddedeki kilit bilgileri karıştırmamak için aşağıdaki tabloyu aklınızda tutun:</p>
+                <ul class="list-none space-y-2 text-sm">
+                    <li class="flex items-start"><strong class="w-28 flex-shrink-0">Kimler İçin?:</strong><span>Herkes için bir HAKTIR.</span></li>
+                    <li class="flex items-start"><strong class="w-28 flex-shrink-0">Zorunlu Olan:</strong><span>Sadece <strong>İLKÖĞRETİM</strong>. (Lise değil!)</span></li>
+                    <li class="flex items-start"><strong class="w-28 flex-shrink-0">Parasız Olan:</strong><span><strong>Devlet okullarındaki</strong> ilköğretim. (Özel okullar değil!)</span></li>
+                    <li class="flex items-start"><strong class="w-28 flex-shrink-0">Devletin Rolü:</strong><span>Gözetim ve denetim yapmak.</span></li>
+                    <li class="flex items-start"><strong class="w-28 flex-shrink-0">Ana Dil Kuralı:</strong><span>Eğitimde ana dil olarak sadece Türkçe okutulur.</span></li>
+                </ul>
+            </div>
+        </div>
+    </details>
+</section>
             </article>
         </div>
     </main>
