--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1270,6 +1270,104 @@
         </div>
     </details>
 </section>
+                <section aria-labelledby="bolum-kamu-yarari">
+    <div class="mt-16 mb-6">
+        <div class="inline-flex items-center px-4 py-2 bg-teal-50 text-teal-800 rounded-full border border-teal-200 shadow-sm">
+            <span class="text-xl mr-3">🏞️</span>
+            <h4 class="text-xl font-bold">Kamu Yararı ve Mülkiyetin Düzenlenmesi</h4>
+        </div>
+        <hr class="mt-2 border-slate-200">
+    </div>
+
+    <details id="madde-43" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 43 – Kıyılardan Yararlanma
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Kıyılar, <strong>Devletin hüküm ve tasarrufu altındadır.</strong><br><br>
+                Deniz, göl ve akarsu kıyılarıyla, deniz ve göllerin kıyılarını çevreleyen sahil şeritlerinden yararlanmada öncelikle <strong>kamu yararı gözetilir.</strong>
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu maddenin ana fikri şudur: Kıyılar ve sahil şeritleri, özel mülkiyete konu olamaz; tüm halka aittir. Devlet, bu alanların halk adına sahibi ve koruyucusudur. Bu nedenle bu alanların kullanımında her zaman kişisel çıkarlardan önce kamu yararı gözetilmek zorundadır.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-44" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 44 – Toprak Mülkiyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Devlet, toprağın verimli olarak işletilmesini korumak ve geliştirmek, erozyonla kaybedilmesini önlemek ve <strong>topraksız olan veya yeter toprağı bulunmayan çiftçilikle uğraşan köylüye toprak sağlamak</strong> amacıyla gerekli tedbirleri alır.
+            </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi</h6>
+                <p style="text-align: justify;" class="text-sm">Bu madde, "sosyal devlet" ilkesinin en somut örneklerinden biridir. Sınav için anahtar bilgi, Anayasa'nın devlete, toprak mülkiyetine müdahale etme ve toprak reformu gibi uygulamalarla topraksız çiftçiye toprak sağlama görevi verdiğini bilmektir.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-45" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 45 – Tarım ve Hayvancılığın Korunması
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Devlet, tarım arazileri ile çayır ve mer'aların amaç dışı kullanılmasını ve tahribini önlemek, ... bitkisel ve hayvansal üretimi artırmak maksadıyla, tarım ve hayvancılıkla uğraşanların ... sağlanmasını kolaylaştırır.
+            </blockquote>
+             <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, devletin tarım ve hayvancılık alanındaki "aktif" rolünü pekiştirir. Devlet sadece kuralları koymakla kalmaz, aynı zamanda üretimi artırmak ve üreticiyi korumak için destekleyici ve kolaylaştırıcı tedbirler de alır.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-46" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 46 – Kamulaştırma
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Devlet ve kamu tüzel kişileri; kamu yararının gerektirdiği hallerde, <strong>gerçek karşılıklarını peşin ödemek şartıyla</strong>, özel mülkiyette bulunan taşınmaz malların tamamını veya bir kısmını, kanunla gösterilen esas ve usullere göre, kamulaştırmaya ... yetkilidir.<br><br>
+                ...Ancak, tarım reformunun uygulanması, büyük enerji ve sulama projeleri ile iskân projelerinin gerçekleştirilmesi, yeni ormanların yetiştirilmesi, kıyıların korunması ve turizm amacıyla kamulaştırılan toprakların bedellerinin ödenme şekli kanunla gösterilir. Kanunun taksitle ödemeyi öngörebileceği bu hallerde, taksitlendirme süresi <strong>beş yılı aşamaz</strong>...<br><br>
+                Kamulaştırılan topraktan, o toprağı doğrudan doğruya işleten <strong>küçük çiftçiye ait olanlarının bedeli, her halde peşin ödenir.</strong>
+            </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Kamulaştırmanın Anayasal Karnesi</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Kamulaştırma ile ilgili en kritik sınav bilgileri şunlardır:</p>
+                <ul class="list-none space-y-2 text-sm">
+                    <li class="flex items-start"><strong class="w-32 flex-shrink-0">Ana Kural:</strong><span>Gerçek değer, nakden ve <strong>PEŞİN</strong> ödenir.</span></li>
+                    <li class="flex items-start"><strong class="w-32 flex-shrink-0">Taksit Mümkün mü?:</strong><span>Evet, kanunda sayılan büyük projeler için.</span></li>
+                    <li class="flex items-start"><strong class="w-32 flex-shrink-0">Taksit Süresi:</strong><span>En fazla <strong>5 YIL</strong> olabilir.</span></li>
+                    <li class="flex items-start"><strong class="w-32 flex-shrink-0">Küçük Çiftçi Farkı:</strong><span>Küçük çiftçinin toprağı kamulaştırılırsa, bedeli <strong>HER ZAMAN PEŞİN</strong> ödenir. Taksit yapılamaz.</span></li>
+                </ul>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-47" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 47 – Devletleştirme ve Özelleştirme
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Kamu hizmeti niteliği taşıyan özel teşebbüsler, kamu yararının zorunlu kıldığı hallerde devletleştirilebilir. Devletleştirme gerçek karşılığı üzerinden yapılır...<br><br>
+                Devletin, kamu iktisadi teşebbüslerinin ve diğer kamu tüzelkişilerinin mülkiyetinde bulunan işletme ve varlıkların özelleştirilmesine ilişkin esas ve usuller kanunla gösterilir.
+            </blockquote>
+            <div class="mt-4 p-4 bg-red-50 border-l-4 border-red-500 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Karıştırmayın: Kamulaştırma vs. Devletleştirme</h6>
+                <p style="text-align: justify;" class="text-sm">
+                <strong>Kamulaştırma:</strong> Sadece <strong>taşınmaz mallara</strong> (arsa, bina vb.) yöneliktir. Mülkiyet devlete geçer.
+                <br><br>
+                <strong>Devletleştirme:</strong> Kamu hizmeti niteliğindeki özel <strong>teşebbüslere</strong> (şirket, fabrika vb.) yöneliktir. Sadece arsayı değil, tüm işletmeyi kapsar.
+                </p>
+            </div>
+        </div>
+    </details>
+
+</section>
+                
             </article>
         </div>
     </main>
