--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -504,6 +504,99 @@
         </details>
     </section>
 </section>
+                <section aria-labelledby="bolum-kisinin-haklari">
+    <h3 id="bolum-kisinin-haklari" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri (Negatif Statü Hakları)</h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölümde yer alan haklar, bireyi devlete ve topluma karşı koruyan, devletin müdahale edemeyeceği özel alanı çizen haklardır. "Koruyucu Haklar" olarak da bilinirler. Devletin bu haklara karşı temel görevi "gölge etmemek", yani dokunmamaktır.
+    </p>
+
+    <div class="mt-16 mb-6">
+        <div class="inline-flex items-center px-4 py-2 bg-teal-50 text-teal-800 rounded-full border border-teal-200 shadow-sm">
+            <span class="text-xl mr-3">🛡️</span>
+            <h4 class="text-xl font-bold">Kişinin Dokunulmazlığı ve Güvenliği</h4>
+        </div>
+        <hr class="mt-2 border-slate-200">
+    </div>
+
+    <details id="madde-17" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 17 – Kişinin Dokunulmazlığı, Maddi ve Manevi Varlığı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>yaşama, maddi ve manevi varlığını koruma ve geliştirme hakkına sahiptir.</strong>
+                <br><br>
+                Tıbbi zorunluluklar ve kanunda yazılı haller dışında, kişinin vücut bütünlüğüne dokunulamaz; rızası olmadan bilimsel ve tıbbi deneylere tabi tutulamaz.
+                <br><br>
+                Kimseye işkence ve eziyet yapılamaz; kimse insan haysiyetiyle bağdaşmayan bir cezaya veya muameleye tabi tutulamaz.
+                <br><br>
+                Meşru müdafaa hali, yakalama ve tutuklama kararlarının yerine getirilmesi, bir tutuklu veya hükümlünün kaçmasının önlenmesi, bir ayaklanma veya isyanın bastırılması veya olağanüstü hallerde yetkili merciin verdiği emirlerin uygulanması sırasında silah kullanılmasına kanunun cevaz verdiği zorunlu durumlarda meydana gelen öldürme fiilleri, birinci fıkra hükmü dışındadır.
+            </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Yaşama Hakkının İstisnaları</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda "Aşağıdakilerden hangisi yaşama hakkının istisnalarından biri değildir?" sorusu sıkça gelir. Anayasa'ya göre bu istisnalar şunlardır:</p>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li>Meşru müdafaa</li>
+                    <li>Yakalama ve tutuklama kararlarını uygulama</li>
+                    <li>Bir hükümlü veya tutuklunun kaçmasını önleme</li>
+                    <li>Bir ayaklanma veya isyanı bastırma</li>
+                    <li>Olağanüstü hallerde verilen emirleri uygulama</li>
+                </ul>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-18" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 18 – Zorla Çalıştırma Yasağı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Hiç kimse zorla çalıştırılamaz. <strong>Angarya yasaktır.</strong>
+                <br><br>
+                Şekil ve şartları kanunla düzenlenmek üzere hükümlülük veya tutukluluk süreleri içindeki çalıştırmalar; olağanüstü hallerde vatandaşlardan istenecek hizmetler; ülke ihtiyaçlarının zorunlu kıldığı alanlarda öngörülen vatandaşlık ödevi niteliğindeki beden ve fikir çalışmaları, zorla çalıştırma sayılmaz.
+            </blockquote>
+            <div class="mt-4 p-4 bg-yellow-50 border-l-4 border-yellow-400 rounded">
+                <p style="text-align: justify;">💡 <strong>Anlamlandırma Kutusu (Angarya Nedir?):</strong> Angarya, bir kişinin emeğinin karşılığı ödenmeksizin veya kendi rızası dışında, özellikle kamu gücü tarafından zorla çalıştırılmasıdır. Bu ilkel bir çalışma biçimi olup modern hukukta yasaklanmıştır.</p>
+            </div>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Zorla Çalıştırma Sayılmayan Haller</h6>
+                 <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda en çok bu istisnalar sorulur. Aşağıdakiler angarya veya zorla çalıştırma değildir:</p>
+                 <ul class="list-disc pl-5 text-sm space-y-1">
+                     <li>Hükümlü ve tutukluların (kanun çerçevesinde) çalıştırılması.</li>
+                     <li>Olağanüstü hallerde (deprem, sel, savaş vb.) istenen hizmetler.</li>
+                     <li>Vatandaşlık ödevi niteliğindeki çalışmalar.</li>
+                 </ul>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-19" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 19 – Kişi Hürriyeti ve Güvenliği
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, kişi hürriyeti ve güvenliğine sahiptir.
+                <br><br>
+                Şekil ve şartları kanunda gösterilen:
+                Mahkemelerce verilmiş hürriyeti kısıtlayıcı cezaların ve güvenlik tedbirlerinin yerine getirilmesi; bir mahkeme kararının veya kanunda öngörülen bir yükümlülüğün gereği olarak ilgilinin yakalanması veya tutuklanması; bir küçüğün gözetim altında ıslahı veya yetkili merci önüne çıkarılması için verilen bir kararın yerine getirilmesi; toplum için tehlike teşkil eden bir akıl hastası, uyuşturucu madde veya alkol tutkunu, bir serseri veya hastalık yayabilecek bir kişinin bir müessesede tedavi, eğitim veya ıslahı için kanunda belirtilen esaslara uygun olarak alınan tedbirin yerine getirilmesi; usulüne aykırı şekilde ülkeye girmek isteyen veya giren, ya da hakkında sınır dışı etme yahut geri verme kararı verilen bir kişinin yakalanması veya tutuklanması; halleri dışında kimse hürriyetinden yoksun bırakılamaz.
+                <br><br>
+                Yakalanan veya tutuklanan kişi, tutulma yerine en yakın mahkemeye gönderilmesi için gerekli süre hariç en geç <strong>kırksekiz saat</strong> ve toplu olarak işlenen suçlarda en çok <strong>dört gün</strong> içinde hâkim önüne çıkarılır. Kimse, bu süreler geçtikten sonra hâkim kararı olmaksızın hürriyetinden yoksun bırakılamaz. Bu süreler olağanüstü hal ve savaş hallerinde uzatılabilir.
+            </blockquote>
+             <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Gözaltı Süreleri</h6>
+                 <p style="text-align: justify;" class="text-sm mb-3">Bu maddedeki süreler doğrudan soru olarak gelir. Unutmayın:</p>
+                 <ul class="list-none space-y-2 text-sm">
+                     <li class="flex items-start"><span class="mr-2">👤</span><div><strong>Bireysel Suçlarda:</strong> En geç <strong>48 saat</strong> içinde hâkim önüne çıkarılmalıdır.</div></li>
+                     <li class="flex items-start"><span class="mr-2">👥</span><div><strong>Toplu Suçlarda:</strong> En çok <strong>4 gün</strong> içinde hâkim önüne çıkarılmalıdır.</div></li>
+                 </ul>
+                 <p style="text-align: justify;" class="text-xs mt-2">Not: Bu sürelere, kişinin en yakın mahkemeye gönderilmesi için gereken "zorunlu yol süresi" dahil değildir.</p>
+             </div>
+        </div>
+    </details>
+
+</section>
             </article>
         </div>
     </main>
