--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -572,27 +572,104 @@
     </details>
 
     <details id="madde-19" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 19 – Kişi Hürriyeti ve Güvenliği
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Herkes, kişi hürriyeti ve güvenliğine sahiptir.
+            <br><br>
+            Şekil ve şartları kanunda gösterilen:
+            Mahkemelerce verilmiş hürriyeti kısıtlayıcı cezaların ve güvenlik tedbirlerinin yerine getirilmesi; bir mahkeme kararının veya kanunda öngörülen bir yükümlülüğün gereği olarak ilgilinin yakalanması veya tutuklanması; bir küçüğün gözetim altında ıslahı veya yetkili merci önüne çıkarılması için verilen bir kararın yerine getirilmesi; toplum için tehlike teşkil eden bir akıl hastası, uyuşturucu madde veya alkol tutkunu, bir serseri veya hastalık yayabilecek bir kişinin bir müessesede tedavi, eğitim veya ıslahı için kanunda belirtilen esaslara uygun olarak alınan tedbirin yerine getirilmesi; usulüne aykırı şekilde ülkeye girmek isteyen veya giren, ya da hakkında sınır dışı etme yahut geri verme kararı verilen bir kişinin yakalanması veya tutuklanması; halleri dışında kimse hürriyetinden yoksun bırakılamaz.
+            <br><br>
+            Suçluluğu hakkında kuvvetli belirti bulunan kişiler, ancak kaçmalarını, delillerin yokedilmesini veya değiştirilmesini önlemek maksadıyla veya bunlar gibi tutuklamayı zorunlu kılan ve kanunda gösterilen diğer hallerde hâkim kararıyla tutuklanabilir. Hâkim kararı olmadan yakalama, ancak suçüstü halinde veya gecikmesinde sakınca bulunan hallerde yapılabilir; bunun şartlarını kanun gösterir.
+            <br><br>
+            Yakalanan veya tutuklanan kişilere, yakalama veya tutuklama sebepleri ve haklarındaki iddialar herhalde yazılı ve bunun hemen mümkün olmaması halinde sözlü olarak derhal, toplu suçlarda en geç hâkim huzuruna çıkarılıncaya kadar bildirilir.
+            <br><br>
+            Yakalanan veya tutuklanan kişi, tutulma yerine en yakın mahkemeye gönderilmesi için gerekli süre hariç en geç <strong>kırksekiz saat</strong> ve toplu olarak işlenen suçlarda en çok <strong>dört gün</strong> içinde hâkim önüne çıkarılır. Kimse, bu süreler geçtikten sonra hâkim kararı olmaksızın hürriyetinden yoksun bırakılamaz. Bu süreler olağanüstü hal ve savaş hallerinde uzatılabilir.
+            <br><br>
+            Kişinin yakalandığı veya tutuklandığı, yakınlarına derhal bildirilir.
+            <br><br>
+            Tutuklanan kişilerin, makul süre içinde yargılanmayı ve soruşturma veya kovuşturma sırasında serbest bırakılmayı isteme hakları vardır. Serbest bırakılma ilgilinin yargılama süresince duruşmada hazır bulunmasını veya hükmün yerine getirilmesini sağlamak için bir güvenceye bağlanabilir.
+            <br><br>
+            Her ne sebeple olursa olsun, hürriyeti kısıtlanan kişi, kısa sürede durumu hakkında karar verilmesini ve bu kısıtlamanın kanuna aykırılığı halinde hemen serbest bırakılmasını sağlamak amacıyla yetkili bir yargı merciine başvurma hakkına sahiptir.
+            <br><br>
+            Bu esaslar dışında bir işleme tâbi tutulan kişilerin uğradıkları zarar, tazminat hukukunun genel prensiplerine göre, Devletçe ödenir.
+        </blockquote>
+         <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Gözaltı Süreleri</h6>
+             <p style="text-align: justify;" class="text-sm mb-3">Bu uzun maddedeki en net ve en çok sorulan bilgi, gözaltı süreleridir. Unutmayın:</p>
+             <ul class="list-none space-y-2 text-sm">
+                 <li class="flex items-start"><span class="mr-2">👤</span><div><strong>Bireysel Suçlarda:</strong> En geç <strong>48 saat</strong> içinde hâkim önüne çıkarılmalıdır.</div></li>
+                 <li class="flex items-start"><span class="mr-2">👥</span><div><strong>Toplu Suçlarda:</strong> En çok <strong>4 gün</strong> içinde hâkim önüne çıkarılmalıdır.</div></li>
+             </ul>
+             <p style="text-align: justify;" class="text-xs mt-2">Not: Bu sürelere, kişinin en yakın mahkemeye gönderilmesi için gereken "zorunlu yol süresi" dahil değildir.</p>
+         </div>
+    </div>
+</details>
+
+</section>
+                <section aria-labelledby="bolum-kisinin-haklari-2">
+    <div class="mt-16 mb-6">
+        <div class="inline-flex items-center px-4 py-2 bg-teal-50 text-teal-800 rounded-full border border-teal-200 shadow-sm">
+            <span class="text-xl mr-3">🔒</span>
+            <h4 class="text-xl font-bold">Özel Hayatın Gizliliği ve Korunması</h4>
+        </div>
+        <hr class="mt-2 border-slate-200">
+    </div>
+
+    <details id="madde-20" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
         <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-            <span class="mr-3 text-xl">📘</span> Madde 19 – Kişi Hürriyeti ve Güvenliği
+            <span class="mr-3 text-xl">📘</span> Madde 20 – Özel Hayatın Gizliliği
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, kişi hürriyeti ve güvenliğine sahiptir.
+                Herkes, özel hayatına ve aile hayatına saygı gösterilmesini isteme hakkına sahiptir. Özel hayatın ve aile hayatının gizliliğine dokunulamaz.
                 <br><br>
-                Şekil ve şartları kanunda gösterilen:
-                Mahkemelerce verilmiş hürriyeti kısıtlayıcı cezaların ve güvenlik tedbirlerinin yerine getirilmesi; bir mahkeme kararının veya kanunda öngörülen bir yükümlülüğün gereği olarak ilgilinin yakalanması veya tutuklanması; bir küçüğün gözetim altında ıslahı veya yetkili merci önüne çıkarılması için verilen bir kararın yerine getirilmesi; toplum için tehlike teşkil eden bir akıl hastası, uyuşturucu madde veya alkol tutkunu, bir serseri veya hastalık yayabilecek bir kişinin bir müessesede tedavi, eğitim veya ıslahı için kanunda belirtilen esaslara uygun olarak alınan tedbirin yerine getirilmesi; usulüne aykırı şekilde ülkeye girmek isteyen veya giren, ya da hakkında sınır dışı etme yahut geri verme kararı verilen bir kişinin yakalanması veya tutuklanması; halleri dışında kimse hürriyetinden yoksun bırakılamaz.
+                Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak, usulüne göre verilmiş <strong>hâkim kararı olmadıkça</strong>; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin <strong>yazılı emri bulunmadıkça</strong>; kimsenin üstü, özel kâğıtları ve eşyası aranamaz ve bunlara el konulamaz. Yetkili merciin kararı <strong>yirmidört saat içinde</strong> görevli hâkimin onayına sunulur. Hâkim, kararını el koymadan itibaren <strong>kırksekiz saat içinde</strong> açıklar; aksi halde, el koyma kendiliğinden kalkar.
                 <br><br>
-                Yakalanan veya tutuklanan kişi, tutulma yerine en yakın mahkemeye gönderilmesi için gerekli süre hariç en geç <strong>kırksekiz saat</strong> ve toplu olarak işlenen suçlarda en çok <strong>dört gün</strong> içinde hâkim önüne çıkarılır. Kimse, bu süreler geçtikten sonra hâkim kararı olmaksızın hürriyetinden yoksun bırakılamaz. Bu süreler olağanüstü hal ve savaş hallerinde uzatılabilir.
+                Herkes, kendisiyle ilgili kişisel verilerin korunmasını isteme hakkına sahiptir. Bu hak; kişinin kendisiyle ilgili kişisel veriler hakkında bilgilendirilme, bu verilere erişme, bunların düzeltilmesini veya silinmesini talep etme ve amaçları doğrultusunda kullanılıp kullanılmadığını öğrenmeyi de kapsar. Kişisel veriler, ancak kanunda öngörülen hallerde veya kişinin açık rızasıyla işlenebilir. Kişisel verilerin korunmasına ilişkin esas ve usuller kanunla düzenlenir.
             </blockquote>
-             <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
-                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Gözaltı Süreleri</h6>
-                 <p style="text-align: justify;" class="text-sm mb-3">Bu maddedeki süreler doğrudan soru olarak gelir. Unutmayın:</p>
-                 <ul class="list-none space-y-2 text-sm">
-                     <li class="flex items-start"><span class="mr-2">👤</span><div><strong>Bireysel Suçlarda:</strong> En geç <strong>48 saat</strong> içinde hâkim önüne çıkarılmalıdır.</div></li>
-                     <li class="flex items-start"><span class="mr-2">👥</span><div><strong>Toplu Suçlarda:</strong> En çok <strong>4 gün</strong> içinde hâkim önüne çıkarılmalıdır.</div></li>
-                 </ul>
-                 <p style="text-align: justify;" class="text-xs mt-2">Not: Bu sürelere, kişinin en yakın mahkemeye gönderilmesi için gereken "zorunlu yol süresi" dahil değildir.</p>
-             </div>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Arama ve El Koymada "24/48 Kuralı"</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu ve sonraki iki maddedeki en önemli sınav sorusu bu kuraldan gelir:</p>
+                <ul class="list-none space-y-2 text-sm">
+                    <li class="flex items-start"><span class="mr-2"><strong>1. Ana Kural:</strong></span><div>Arama ve el koyma için <strong>HÂKİM KARARI</strong> şarttır.</div></li>
+                    <li class="flex items-start"><span class="mr-2"><strong>2. İstisna:</strong></span><div>Gecikmesinde sakınca varsa, kanunla yetkilendirilmiş merciin (Örn: Kolluk Amiri) <strong>YAZILI EMRİ</strong> yeterlidir.</div></li>
+                    <li class="flex items-start"><span class="mr-2"><strong>3. Denetim:</strong></span><div>Bu yazılı emir, <strong>24 SAAT İÇİNDE</strong> görevli hâkimin onayına sunulmak zorundadır.</div></li>
+                    <li class="flex items-start"><span class="mr-2"><strong>4. Sonuç:</strong></span><div>Hâkim, <strong>48 SAAT İÇİNDE</strong> kararını açıklamazsa, el koyma kararı kendiliğinden kalkar.</div></li>
+                </ul>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-21" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 21 – Konut Dokunulmazlığı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Kimsenin konutuna dokunulamaz. Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak usulüne göre verilmiş <strong>hâkim kararı olmadıkça</strong>; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin <strong>yazılı emri bulunmadıkça</strong>; kimsenin konutuna girilemez, arama yapılamaz ve buradaki eşyaya el konulamaz. Yetkili merciin kararı <strong>yirmidört saat içinde</strong> görevli hâkimin onayına sunulur. Hâkim, kararını el koymadan itibaren <strong>kırksekiz saat içinde</strong> açıklar; aksi halde, el koyma kendiliğinden kalkar.
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Dikkat! Bu maddedeki usul, bir önceki maddedeki (Özel Hayatın Gizliliği) arama ve el koyma usulü ile **birebir aynıdır.** Yani, meşhur **24/48 saat kuralı** burada da geçerlidir. Birini öğrenen, diğerini de ezberlemiş olur. Sınavda konut dokunulmazlığı için de, özel hayatın gizliliği için de aynı usul kurallarını arayın.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-22" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 22 – Haberleşme Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, haberleşme hürriyetine sahiptir. Haberleşmenin gizliliği esastır.<br><br>
+                Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak usulüne göre verilmiş <strong>hâkim kararı olmadıkça</strong>; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin <strong>yazılı emri bulunmadıkça</strong>; haberleşme engellenemez ve gizliliğine dokunulamaz. Yetkili merciin kararı <strong>yirmidört saat içinde</strong> görevli hâkimin onayına sunulur. Hâkim, kararını <strong>kırksekiz saat içinde</strong> açıklar; aksi halde, karar kendiliğinden kalkar.<br><br>
+                İstisnaların uygulanacağı kamu kurum ve kuruluşları kanunda belirtilir.
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu (Aynı Kural, Üçüncü Kez!):</strong> Haberleşmenin gizliliğine dokunma usulü de Madde 20 ve 21 ile **tıpatıp aynıdır**. Ana kural hâkim kararı, istisnası yetkili merciin yazılı emri ve **24/48 saat** denetim süresi. Anayasa bu üç özel alana (özel hayat, konut, haberleşme) aynı derecede önem vermiş ve aynı koruma kalkanını sağlamıştır.</p>
+            </div>
         </div>
     </details>
 
