--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -60,7 +60,7 @@
                     <h2 id="genel-esaslar" class="text-3xl font-bold text-slate-800 mt-16 mb-6 border-b pb-4">
                         BİRİNCİ KISIM: Genel Esaslar
                     </h2>
-                    <section aria-labelledby="bolum1-4">
+<section aria-labelledby="bolum1-4">
     <h3 id="bolum1-4" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">Devletin "Çekirdek Ailesi": Değiştirilemez Hükümler</h3>
     <p class="text-slate-600 mb-6" style="text-align: justify;">
         Anayasa'nın bu ilk dört maddesi, devletin kimliğini ve karakterini tanımlayan temel direklerdir. Bu maddeler o kadar önemlidir ki, Anayasa'nın kendisi tarafından özel bir koruma zırhına alınmışlardır. Sınavda bu bölümden en az bir soru kesin olarak gelir.
@@ -85,12 +85,12 @@
             <span class="mr-3 text-xl">📘</span> Madde 2 – Cumhuriyetin Nitelikleri
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
-            <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
-                <p style="text-align: justify;">❗ <strong>Sınav Stratejisi:</strong> Bu madde, GYS'nin en favori soru kaynaklarından biridir. "Aşağıdakilerden hangisi Cumhuriyetin niteliklerinden biri değildir?" sorusu standarttır. Nitelikleri ezberlerken, <strong>federal, monarşik, teokratik, sosyalist</strong> gibi çeldiricilerin bu listede olmadığını bilmek kritik öneme sahiptir.</p>
-            </div>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
                 Türkiye Cumhuriyeti, toplumun huzuru, <strong>millî dayanışma</strong> ve <strong>adalet anlayışı</strong> içinde, <strong>insan haklarına saygılı</strong>, <strong>Atatürk milliyetçiliğine bağlı</strong>, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir</strong>.
             </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <p style="text-align: justify;">❗ <strong>Sınav Stratejisi:</strong> Bu madde, GYS'nin en favori soru kaynaklarından biridir. "Aşağıdakilerden hangisi Cumhuriyetin niteliklerinden biri değildir?" sorusu standarttır. Nitelikleri ezberlerken, <strong>federal, monarşik, teokratik, sosyalist</strong> gibi çeldiricilerin bu listede olmadığını bilmek kritik öneme sahiptir.</p>
+            </div>
             <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-400 rounded">
                 <p style="text-align: justify;"><strong>🧠 Hafıza Tekniği (Kodlama):</strong> Cumhuriyetin niteliklerini akılda tutmak için şu kodlamayı kullanabilirsiniz: <strong>"İLAHİD-S"</strong></p>
                 <ul class="list-none mt-2 space-y-1 font-mono text-sm text-sky-900">
@@ -132,12 +132,12 @@
             <span class="mr-3 text-xl">📘</span> Madde 4 – Değiştirilemeyecek Hükümler
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
-             <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
-                <p style="text-align: justify;">❗ <strong>Sınav Stratejisi:</strong> Bu maddedeki en kritik ifade "teklif edilemez" kısmıdır. Bu, ilk üç maddenin değiştirilmesinin yasama meclisinde tartışmaya dahi açılamayacağı anlamına gelir. Bu durum, Anayasamızın "sert" (katı) bir anayasa olduğunun en güçlü göstergesidir.</p>
-            </div>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
                 Anayasanın 1 inci maddesindeki Devletin şeklinin Cumhuriyet olduğu hakkındaki hüküm ile, 2 nci maddesindeki Cumhuriyetin nitelikleri ve 3 üncü maddesi hükümleri <strong>değiştirilemez ve değiştirilmesi teklif edilemez</strong>.
             </blockquote>
+             <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <p style="text-align: justify;">❗ <strong>Sınav Stratejisi:</strong> Bu maddedeki en kritik ifade "teklif edilemez" kısmıdır. Bu, ilk üç maddenin değiştirilmesinin yasama meclisinde tartışmaya dahi açılamayacağı anlamına gelir. Bu durum, Anayasamızın "sert" (katı) bir anayasa olduğunun en güçlü göstergesidir.</p>
+            </div>
         </div>
     </details>
 </section>
