--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -72,7 +72,7 @@
     </summary>
     <div class="px-4 pb-4 mt-2 border-t pt-4">
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-            [cite_start]Türkiye Devleti bir <strong>Cumhuriyettir</strong>. [cite: 32]
+        Türkiye Devleti bir <strong>Cumhuriyettir</strong>.
         </blockquote>
         <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
             <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu, Anayasa'nın en kısa ve en net hükmüdür. Devletin yönetim şeklinin, egemenliğin halka ait olduğu <strong>Cumhuriyet</strong> olduğunu kesin bir dille ifade eder. Sınavda bu maddenin yorumu, genellikle monarşi, oligarşi gibi diğer yönetim biçimlerinin reddedildiği üzerine kuruludur.</p>
